<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".NewUserFragment">

    <LinearLayout
        android:id="@+id/ContainerLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MessageNewUser"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/TextViewLoginStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <EditText
        android:id="@+id/newUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        android:hint="@string/prompt_email"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/AddUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        app:cornerRadius="0dp"
        android:text="@string/RegisterButtonString"
        android:backgroundTint="@color/black"
        />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingBarRegister"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</FrameLayout>