<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/ContainerLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewLoginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MessageLogin"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:hint="@string/prompt_email"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="0dp"
            android:text="@string/signINButtonString"
            android:backgroundTint="@color/black"
            />

        <ProgressBar
            android:id="@+id/loadingBarLogin"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />


    </LinearLayout>


</FrameLayout>